tests/ui/traits/generic_param_mismatch_in_unsatisfied_projection.stderr
error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/generic_param_mismatch_in_unsatisfied_projection.rs:18:33
   |
LL |         F: for<'a> FnOnce(<F as Output<i32>>::Type),
   |                                 ^^^^^^ expected 0 generic arguments
   |
note: trait defined here, with 0 generic parameters
  --> $DIR/generic_param_mismatch_in_unsatisfied_projection.rs:9:7
   |
LL | trait Output<'a> {
   |       ^^^^^^
help: replace the generic bound with the associated type
   |
LL |         F: for<'a> FnOnce(<F as Output<Type = i32>>::Type),
   |                                        ++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0107`.
